# trash-my-cv

./: README.md
client/: index.html  package.json
client/src/: App.tsx
client/src/components/: Resume.tsx  Review.tsx
client/src/types/: Review.ts
server/: .env  main.py  pyproject.toml  requirements.txt
